# thread_local_wrapper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: test_main.cpp
